--- a/src/hydrogen/blas/CMakeLists.txt
+++ b/src/hydrogen/blas/CMakeLists.txt
@@ -1,5 +1,5 @@
 if (HYDROGEN_HAVE_GPU)
   add_subdirectory(gpu)
 
-  set(CUDA_SOURCES "${CUDA_SOURCES}" PARENT_SCOPE)
+  set(GPU_SOURCES "${GPU_SOURCES}" PARENT_SCOPE)
 endif ()
