--- a/src/hydrogen/CMakeLists.txt
+++ b/src/hydrogen/CMakeLists.txt
@@ -1,5 +1,11 @@
 add_subdirectory(blas)
+add_subdirectory(device)
 
 if (HYDROGEN_HAVE_GPU)
-  set(CUDA_SOURCES "${CUDA_SOURCES}" PARENT_SCOPE)
+  set(GPU_SOURCES "${GPU_SOURCES}" PARENT_SCOPE)
 endif ()
+
+set_full_path(THIS_DIR_CXX_SOURCES
+  Error.cpp)
+
+set(SOURCES "${SOURCES}" "${THIS_DIR_CXX_SOURCES}" PARENT_SCOPE)
