--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -1,6 +1,11 @@
 list(APPEND HYDROGEN_CATCH2_TEST_FILES
   matrix_test.cpp)
 
+if (HYDROGEN_HAVE_GPU)
+  list(APPEND HYDROGEN_CATCH2_TEST_FILES
+    gpu_test.cpp)
+endif ()
+
 # Add the sequential test main() function
 add_executable(seq-catch-tests
   SequentialCatchMain.cpp "${HYDROGEN_CATCH2_TEST_FILES}")
