--- a/cmake/configure_files/hydrogen_config.h.in
+++ b/cmake/configure_files/hydrogen_config.h.in
@@ -50,6 +50,7 @@
 #cmakedefine HYDROGEN_HAVE_ALUMINUM
 #cmakedefine HYDROGEN_HAVE_NCCL2
 #cmakedefine HYDROGEN_HAVE_AL_MPI_CUDA
+#cmakedefine HYDROGEN_HAVE_AL_HOST_XFER
 
 #cmakedefine HYDROGEN_ENSURE_HOST_MPI_BUFFERS
 #cmakedefine HYDROGEN_HAVE_CUDA_AWARE_MPI
