--- a/unit_test/CMakeLists.txt
+++ b/unit_test/CMakeLists.txt
@@ -3,6 +3,8 @@ list(APPEND HYDROGEN_CATCH2_TEST_FILES
   )
 if (HYDROGEN_HAVE_GPU)
   list(APPEND HYDROGEN_CATCH2_TEST_FILES
+    gpu_test.cpp
+    gpu_entrywise_map_test.cu
     copy_cpu_gpu_test.cpp
     )
   if (HYDROGEN_HAVE_HALF AND HYDROGEN_GPU_USE_FP16)
@@ -11,11 +13,6 @@ if (HYDROGEN_HAVE_GPU)
       )
   endif ()
 endif (HYDROGEN_HAVE_GPU)
-
-if (HYDROGEN_HAVE_GPU)
-  list(APPEND HYDROGEN_CATCH2_TEST_FILES
-    gpu_test.cpp)
-endif ()
 
 # Add the sequential test main() function
 add_executable(seq-catch-tests
