add cusolver to exported configure file

--- a/cmake/configure_files/HydrogenConfig.cmake.in
+++ b/cmake/configure_files/HydrogenConfig.cmake.in
@@ -100,7 +100,8 @@ if (_HYDROGEN_HAVE_CUDA)
   endif ()
 
   foreach (lib IN LISTS CUDA_CUBLAS_LIBRARIES CUDA_LIBRARIES
-      CUDA_CUDA_LIBRARY CUB_LIBRARIES NVML_LIBRARIES)
+      CUDA_CUDA_LIBRARY CUB_LIBRARIES NVML_LIBRARIES
+      CUDA_cusolver_LIBRARY)
 
     if (lib)
       list(APPEND _CUDA_TOOLKIT_LIBS ${lib})
